# tezos-vanity-address

./: Cargo.toml  readme.md
src/: main.rs
